# devtools-x

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.cjs  .prettierrc.js  .yarnrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  copyMonaco.ts  features.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  test-actions.yml  updater.yml
scripts/: bumpVersion.mjs  compress.mjs  prepare.mjs  sign.mjs
src/: App.css  App.module.css  App.tsx  anim.css  index.css  main.tsx  theme.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: base64_image.rs  compress.rs  hash.rs  image.rs  image_compressor.rs  minify.rs  mod.rs  ping.rs  qr.rs
src/Components/: Card.tsx  Copy.tsx  HashBox.tsx  JsonEditor.tsx  MonacoWrapper.tsx  OutputBox.tsx  Welcome.tsx  jsoneditor.css  styles.module.css  styles.tsx
src/Contexts/: AppContextProvider.tsx
src/Features/Image/: Image.tsx
src/Features/Json/: IsolateTab.tsx  JsonFormatter.tsx  SingleTab.tsx
src/Features/Markdown/: Markdown.tsx  markdown.css
src/Features/Playground/: Playground.tsx
src/Features/Regex/: RegexTester.tsx  ace.css
src/Features/Rest/: Headers.tsx  IsolateTab.tsx  Params.tsx  Rest.tsx  Row.tsx
src/Features/Sql/: Sql.tsx
src/Features/UnitConverter/: UnitConverter.tsx
src/Features/YamlJson/: Yaml.tsx
src/Features/base64/: Base64.tsx  Base64Image.tsx  Base64Text.tsx
src/Features/colors/: ColorEditableOutput.tsx  ColorGenerator.tsx  ColorHarmonies.tsx  ColorTesting.tsx  Colors.tsx  CustomPicker.tsx  RenderShades.tsx  Wheels.tsx  WheelsProvider.tsx  blindness.ts  colorgenerator.module.css  contrast.ts  generator.ts  harmonies.ts  hooks.ts  styles.module.css  utilities.ts
src/Features/cron/: Cron.tsx
src/Features/css/: CssPlayground.tsx
src/Features/epoch/: Epoch.tsx  styles.module.css
src/Features/faker/: Faker.tsx  FakerInput.tsx  styles.module.css
src/Features/hash/: FileHash.tsx  Hash.tsx  HashBox.tsx  HmacGenerator.tsx
src/Features/html-preview/: HtmlPreview.tsx
src/Features/ids/: Ids.tsx
src/Features/image/: Base64ToImage.tsx  BulkImage.tsx  Image.tsx  ImageCrop.tsx  cropper.css  styles.module.css
src/Features/json/: JsonFormatter.tsx  SingleTab.tsx  styles.module.css
src/Features/json-yaml/: Yaml.tsx
src/Features/jwt/: JWT.tsx
src/Features/lorem/: Lorem.tsx
src/Features/markdown/: Editor.tsx  Markdown.tsx  MarkdownInsertion.tsx  MarkdownPreview.tsx  Readme.tsx  ReadmeSidebar.tsx  constants.ts  templates.ts  types.ts
src/Features/minifiers/: Minify.tsx  css.tsx  html.tsx  js.tsx
src/Features/number-tools/: Nums.tsx
src/Features/nums/: Nums.tsx
src/Features/openai/: OpenAI.tsx
src/Features/password/: Counter.tsx  index.tsx  styles.module.css
src/Features/pastebin/: Pastebin.tsx  pastebin.css
src/Features/pdf/: PdfReader.tsx  styles.module.css
src/Features/ping/: Ping.tsx
src/Features/playground/: Playground.tsx
src/Features/qrcode/: QrCode.tsx  QrCodeReader.tsx
src/Features/quicktype/: Quicktype.tsx  styles.module.css
src/Features/random/: Random.tsx
src/Features/react-playground/: Playground.tsx
src/Features/reactPlayground/: Playground.tsx
src/Features/regex/: Highlight.tsx  RegexTester.tsx  regex.css
src/Features/repl/: Repl.tsx  styles.module.css
src/Features/rest/: IsolateTab.tsx  Params.tsx  Rest.tsx  Row.tsx  SingleTab.tsx
src/Features/snippets/: Snippets.module.css  Snippets.tsx
src/Features/sql/: Sql.tsx
src/Features/svg/: Svg.tsx
src/Features/text/: TextCompress.tsx  TextDiff.tsx  TextUtils.tsx
src/Features/unit-converter/: UnitConverter.tsx
src/Features/unitconverter/: UnitConverter.tsx
src/Features/url/: UrlEncoder.tsx  UrlParser.tsx
src/Features/yaml-json/: Yaml.tsx
src/Layout/: Navbar.tsx  Settings.tsx  themes.ts
src/Layout/Navbar/: ColorIcons.tsx  index.tsx  items.tsx  styles.ts  (+1 more)
src/Theme/: components.ts  index.ts
src/hooks/: index.ts  useColorState.ts  useContainerSize.tsx  useDebouceCallback.tsx  useFile.tsx  useMdEditorState.ts
src/types/: colors.ts  snippets.ts
src/utils/: analytics.ts  colors.ts  database.ts  db.ts  functions.ts  index.ts  setupConfig.ts  steps.ts  strings.ts  useDebouceCallback.tsx
src/vips/: vips.js  vips.worker.js
vite/: copyAssets.ts  copyMonaco.ts
(+15 files in other folders)
