[package]
name = "devtools-x"
version = "2.11.1"
description = "Developer tools desktop application"
authors = ["Sparkenstein"]
license = "MIT"
repository = "https://github.com/fosslife/devtools-x"
default-run = "devtools-x"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "dialog-ask", "updater", "protocol-all", "http-all", "dialog-open", "dialog-confirm", "clipboard-all", "dialog-save", "fs-all", "devtools"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
md-5 = "0.10.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
rayon = "1.7.0"
dashmap = { version = "5.4.0", features = ["serde"] }
surge-ping = "0.8"
tokio = { version = "1.21.2", features = ["full"] }
# oxc = { version = "0.16.3", features = ["minifier", "transformer"] }
minify-html = "0.15.0"
fast_image_resize = "3.0.3"
image = "0.24.8"
anyhow = "1.0.79"
# once_cell = "1"
oxipng = { version = "9.0", features = [
    "parallel",
    "zopfli",
    "filetime",
], default-features = false }
webp = "0.2"
base64 = "0.21.7"
tauri-plugin-aptabase = "0.4"
flate2 = "1.0"
bardecoder = "0.5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"     # can experiment with 'z' as well

[profile.dev]
incremental = false
