[package]
name = "devtools-x"
version = "3.3.3"
description = "Developer tools desktop application"
authors = ["Sparkenstein"]
license = "MIT"
repository = "https://github.com/fosslife/devtools-x"
default-run = "devtools-x"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "devtools"] }
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
md-5 = "0.10.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
rayon = "1.7.0"
dashmap = { version = "5.4.0", features = ["serde"] }
surge-ping = "0.8"
tokio = { version = "1.21.2", features = ["full"] }
# oxc = { version = "0.16.3", features = ["minifier", "transformer"] }
minify-html = "0.15.0"
fast_image_resize = "3.0.3"
image = "0.24.8"
anyhow = "1.0.79"
# once_cell = "1"
oxipng = { version = "9.0", features = [
    "parallel",
    "zopfli",
    "filetime",
], default-features = false }
webp = "0.2"
base64 = "0.21.7"
flate2 = "1.0"
bardecoder = "0.5.0"
imageinfo = "0.7.17"
tauri-plugin-process = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"     # can experiment with 'z' as well
strip = true

[profile.dev]
incremental = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
